fix the favicon not showing up

--- a/src/sass/_MediaQuery.scss
+++ b/src/sass/_MediaQuery.scss
@@ -1,4 +1,4 @@
-$break-small: 375px;
+$break-small: 360px;
 $break-medium: 768px;
 $break-medium-plus: 960px;
 $break-large: 1190px;
